fix: message bar overflow - Message bar blocked by member list (15" Laptop)

--- a/Compy.theme.css
+++ b/Compy.theme.css
@@ -2,7 +2,7 @@
  * @name Compy
  * @author NotAddison
  * @authorLink https://github.com/NotAddison
- * @version 1.1.4
+ * @version 1.1.5
  * @description A Compact Discord Theme. | Dark theme is required!
  * @source https://github.com/NotAddison/Compy
  * @website https://notaddison.github.io/Portfolio/
@@ -225,7 +225,7 @@
 
 /* Server Message Bar */
 .form-3gdLxP{
-    width: calc(97%);
+    width: calc(88%);
 }
 
 /* DM Message Bar */
